# OpenEnv

./: .dockerignore  .gitignore  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  policy.py  pyproject.toml  scoring.py  task_fixtures.py
engines/: __init__.py  ai_reviewer.py  static_analysis.py  test_runner.py
fixtures/tasks/: auth_policy_reject.json  clean_refactor_approve.json  dependency_confusion_reject.json  license_compliance_reject.json  secret_leak_reject.json
server/: Dockerfile  __init__.py  app.py  code_review_environment.py  requirements.txt
tests/: conftest.py  test_environment.py  test_inference.py  test_models.py  test_scoring.py  test_tasks.py
